# hardwave-daw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md
.github/workflows/: ci.yml  dev-build.yml  frontend-publish.yml  functional-smoke.yml  release-windows-selfhosted.yml  release.yml
crates/hardwave-audio-io/: Cargo.toml
crates/hardwave-audio-io/src/: coreaudio_workgroup.rs  lib.rs  wasapi_exclusive.rs
crates/hardwave-dsp/: Cargo.toml
crates/hardwave-dsp/src/: aiff_reader.rs  audio_file.rs  audio_stream.rs  auto_eq.rs  biquad.rs  chord_detect.rs  convolution.rs  delay_line.rs  distortion.rs  drum_machine.rs  dynamics.rs  dynamics_extras.rs  eq_interaction.rs  fade.rs  fm_synth.rs  gpu_buffers.rs  granular.rs  ir_library.rs  kick_synth.rs  latency.rs  lib.rs  loudness.rs  mastering.rs  mix_feedback.rs  modulation.rs  modulation_matrix.rs  multiband.rs  parametric_eq.rs  phase_vocoder.rs  recording.rs  reverb.rs  reverb_extras.rs  sample_classify.rs  spectrum.rs  stereo.rs  stretch_apply.rs  synth.rs  synth_extras.rs  synth_presets.rs  synth_voicing.rs  (+3 more)
crates/hardwave-engine/: Cargo.toml
crates/hardwave-engine/src/: audio_pool.rs  engine.rs  graph.rs  input_node.rs  insert_chain.rs  lib.rs  master_node.rs  master_tap.rs  midi_track_node.rs  parallel_eval.rs  track_node.rs  transport.rs
crates/hardwave-engine/tests/: functional_smoke.rs  stress.rs
crates/hardwave-engine/tests/common/: mod.rs
crates/hardwave-metering/: Cargo.toml
crates/hardwave-metering/src/: lib.rs
crates/hardwave-midi/: Cargo.toml
crates/hardwave-midi/src/: input.rs  lib.rs  osc.rs  output.rs  recording.rs  theory.rs
crates/hardwave-native-plugins/: Cargo.toml
crates/hardwave-native-plugins/src/: auto_filter.rs  auto_pan.rs  bitcrush.rs  chorus.rs  clipper.rs  compressor.rs  conv_reverb.rs  delay.rs  distortion.rs  eq.rs  exciter.rs  filter.rs  flanger.rs  fm.rs  gain.rs  gate.rs  lib.rs  limiter.rs  mid_side.rs  mono_fold.rs  multiband.rs  noise.rs  phaser.rs  reverb.rs  ring_mod.rs  saturator.rs  soundgoodizer.rs  stereo.rs  stereo_double.rs  sub_bass.rs  tape.rs  transient.rs  tremolo.rs  triple_osc.rs  vibrato.rs  wavetable.rs
crates/hardwave-native-plugins/tests/: plugin_stress.rs
crates/hardwave-plugin-host/: Cargo.toml
crates/hardwave-plugin-host/src/: clap_ffi.rs  clap_instance.rs  gui_scaling.rs  lib.rs  plugin_ops.rs  scanner.rs  types.rs  vst3.rs
crates/hardwave-project/: Cargo.toml
crates/hardwave-project/src/: automation.rs  automation_clip.rs  automation_recording.rs  channel_rack.rs  clip.rs  fl_import.rs  lfo.rs  lib.rs  marketplace.rs  mixer.rs  multiplayer.rs  project.rs  recording_session.rs  scripting_api.rs  sidechain_routing.rs  tempo.rs  track.rs  track_freeze.rs
docs/: mixer-redesign-plan.md  perf-audit-overview.md  perf-audit.md
installer/: index.html  package-lock.json  package.json  tailwind.config.js
installer/src/: App.tsx  index.css
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/src/: install.rs  lib.rs  main.rs
installer/src/components/: HwLogo.tsx  WindowChrome.tsx
installer/src/screens/: Done.tsx  Splash.tsx  Welcome.tsx
scripts/: release.sh  setup-windows-runner.ps1
src-tauri/: .tauri-updater-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: frontend_updater.rs  lib.rs  main.rs  midi_clock.rs  midi_map.rs  midi_sync.rs  midi_timecode.rs  prefs.rs
src-tauri/src/commands/: audio.rs  automation.rs  autosave.rs  dev.rs  engine.rs  export.rs  history.rs  midi.rs  midi_capture.rs  midi_input.rs  midi_learn.rs  midi_output.rs  mod.rs  plugin_presets.rs  plugins.rs  project.rs  sends.rs  tracks.rs  transport.rs
