[workspace]
resolver = "2"
members = [
    "crates/hardwave-engine",
    "crates/hardwave-audio-io",
    "crates/hardwave-midi",
    "crates/hardwave-plugin-host",
    "crates/hardwave-project",
    "crates/hardwave-metering",
    "crates/hardwave-dsp",
    "crates/hardwave-native-plugins",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Hardwave Studios"]

[workspace.dependencies]
# Audio I/O. cpal's default build handles WASAPI on Windows, CoreAudio on
# macOS, and ALSA on Linux. JACK (Linux) and ASIO (Windows) are opt-in via
# the hardwave-audio-io crate's `jack` / `asio` features, since they require
# system libraries (libjack-dev) or SDKs (Steinberg ASIO) that aren't always
# present on build machines.
cpal = { version = "0.15", default-features = false }

# Lock-free communication
rtrb = "0.3"
crossbeam-channel = "0.5"

# Concurrency
parking_lot = "0.12"
atomic_float = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
bincode = "1"

# Graph
petgraph = "0.6"

# FFT / DSP
rustfft = "6.2"
rubato = "0.15"

# Audio file I/O
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

# Plugin hosting
vst3 = "0.3"

# Window handle bridging
raw-window-handle = "0.6"

# Compression
zstd = "0.13"

# MIDI
midir = "0.10"

# Utility
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = "2"

[profile.release]
lto = "thin"
opt-level = 3
