[package]
name = "hardwave-daw"
version.workspace = true
edition.workspace = true

[features]
default = []
jack = ["hardwave-engine/jack"]
asio = ["hardwave-engine/asio"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
hardwave-engine = { path = "../crates/hardwave-engine" }
hardwave-project = { path = "../crates/hardwave-project" }
hardwave-plugin-host = { path = "../crates/hardwave-plugin-host" }
hardwave-metering = { path = "../crates/hardwave-metering" }
hardwave-midi = { path = "../crates/hardwave-midi" }
hardwave-dsp = { path = "../crates/hardwave-dsp" }

tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
dirs.workspace = true
log.workspace = true
env_logger.workspace = true
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[lib]
name = "hardwave_daw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
