[package]
name = "hardwave-daw"
version.workspace = true
edition.workspace = true

[features]
default = []
jack = ["hardwave-engine/jack"]
asio = ["hardwave-engine/asio"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
hardwave-engine = { path = "../crates/hardwave-engine" }
hardwave-project = { path = "../crates/hardwave-project" }
hardwave-plugin-host = { path = "../crates/hardwave-plugin-host" }
hardwave-metering = { path = "../crates/hardwave-metering" }
hardwave-midi = { path = "../crates/hardwave-midi" }
hardwave-dsp = { path = "../crates/hardwave-dsp" }
hardwave-native-plugins = { path = "../crates/hardwave-native-plugins" }
raw-window-handle.workspace = true

tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
dirs.workspace = true
log.workspace = true
env_logger.workspace = true
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

# Frontend updater — see `src/frontend_updater.rs`. Lets us hot-swap the
# React bundle on app launch without forcing customers to reinstall.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sha2 = "0.10"
hex = "0.4"
semver = "1"
# Tiny dep used only by frontend_updater::validate_cached_bundle to scan
# index.html for src/href asset references. We strip prefixes manually
# rather than parse HTML — the regex is enough for Vite's emit format.
regex = { version = "1", default-features = false, features = ["std"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
futures-util = "0.3"
url = "2"

hound.workspace = true
flacenc.workspace = true
shine-rs.workspace = true
vorbis_rs.workspace = true

[dev-dependencies]
tempfile = "3"

[lib]
name = "hardwave_daw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
