[package]
name = "hardwave-audio-io"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable JACK support (Linux/FreeBSD). Requires libjack-dev at build time.
jack = ["cpal/jack"]
# Enable ASIO support (Windows). Requires the Steinberg ASIO SDK.
asio = ["cpal/asio"]

[dependencies]
cpal = { workspace = true, default-features = true }
rtrb.workspace = true
parking_lot.workspace = true
log.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
# Direct WASAPI bindings for exclusive-mode output. cpal 0.15 only exposes
# shared mode, so the exclusive path is built on IAudioClient via this crate.
wasapi = "0.15"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
