[package]
name = "hardwave-plugin-host"
version.workspace = true
edition.workspace = true

[dependencies]
vst3.workspace = true
raw-window-handle.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
uuid.workspace = true
dirs.workspace = true
hardwave-midi = { path = "../hardwave-midi" }

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Com"] }

[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"
