[package]
name = "hardwave-daw-installer"
version = "0.1.0"
edition = "2021"
description = "Hardwave DAW custom installer"
publish = false

# Stand-alone — NOT a member of the parent DAW Cargo workspace at
# /Cargo.toml. Cargo otherwise sees the top-level workspace and
# refuses to build because this package isn't in `workspace.members`.
# An empty `[workspace]` declares this package as its own workspace
# root, decoupling it from the DAW build graph entirely. The
# installer ships its own Cargo.lock; deps don't need to align with
# the main DAW.
[workspace]

[lib]
name = "hardwave_daw_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
zip = "2"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
mslnk = "0.1"
